# 3d_objects_rendering

./: 3DGraphics.sln  CMakeLists.txt
3DGraphics/: 3DGraphics.vcxproj  3DGraphics.vcxproj.filters  FrameCounter.cpp  FrameCounter.h  Main.cpp  Matrix.cpp  Matrix.h  Object3D.cpp  Object3D.h  Point.cpp  Point.h  Render3D.cpp  Render3D.h  RenderWindow.cpp  RenderWindow.h  packages.config
3DGraphics/Headers/: Header.h  Matrix.h  Object3D.h  Point.h  Render3D.h  RenderWindow.h
3DGraphics/SourceFiles/: Main.cpp  Matrix.cpp  Object3D.cpp  Point.cpp  Render3D.cpp  RenderWindow.cpp
3DGraphics/headers/: KochCurve.h  Polygons.h
3DGraphics/sourceFiles/: Polygons.cpp
SpaceTraveler/: FrameRate.cpp  FrameRate.h  FrameRateRenderer.cpp  FrameRateRenderer.h  GameWindow.cpp  GameWindow.h  Header.h  Mesh.cpp  Mesh.h  SpaceTraveler.vcxproj  SpaceTraveler.vcxproj.filters  TextRenderer.cpp  TextRenderer.h  Triangle.cpp  Triangle.h  camera.cpp  camera.h  camera_impl.h  copy_pointer.h  engine_math.cpp  engine_math.h  frame_rate.cpp  frame_rate.h  frame_rate_renderer.cpp  frame_rate_renderer.h  game_window.cpp  game_window.h  header_impl.cpp  light.h  lighting.cpp  lighting.h  main.cpp  matrix.cpp  matrix.h  matrix.hpp  matrix_impl.h  mesh_loader.cpp  mesh_loader.h  mesh_renderer.cpp  mesh_renderer.h  (+9 more)
space_traveler/: engine_math.cpp  frame_rate.h  game_window.cpp  game_window.h  header.h  main.cpp  matrix.h  mesh.h  mesh_impl.h  mesh_loader.h  point.h  point_impl.h  space_traveler.vcxproj  space_traveler.vcxproj.filters  text_renderer.h  triangle.h  triangle_impl.h
(+16 files in other folders)
